<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:background="@color/very_light_gray"
    android:fitsSystemWindows="true">

    <android.support.design.widget.CoordinatorLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true"
        tools:context=".places.about.LoginActivity"
        android:id="@+id/coordinator_layout"
        android:layout_marginLeft="@dimen/large_layout_side_padding"
        android:layout_marginRight="@dimen/large_layout_side_padding"
        android:layout_marginTop="@dimen/large_layout_top_padding">

        <android.support.design.widget.AppBarLayout
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:theme="@style/AppTheme.AppBarOverlay">

            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="?attr/colorPrimary"
                app:layout_scrollFlags="scroll|enterAlways"/>
        </android.support.design.widget.AppBarLayout>

        <android.support.v4.widget.NestedScrollView
            android:id="@+id/event_details_nested_scroll_view"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:clipToPadding="false"
            app:layout_behavior="@string/appbar_scrolling_view_behavior">


            <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:app="http://schemas.android.com/apk/res-auto"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardBackgroundColor="@android:color/white"
                app:cardElevation="@dimen/elevation_amount"
                app:cardUseCompatPadding="true"
                android:layout_marginTop="20dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:paddingTop="10dp">
                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">
                        <ImageButton
                            android:id="@+id/user_profile_photo"
                            android:layout_width="103dp"
                            android:layout_height="100dp"
                            android:layout_centerHorizontal="true"
                            android:background="@drawable/logo"
                            android:elevation="10dp" />

                    </RelativeLayout>


                    <LinearLayout
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:paddingLeft="20dp"
                        android:paddingRight="20dp">

                        <EditText
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content"
                            android:drawableLeft="@drawable/user_icon"
                            android:hint="@string/pref_title_username"
                            android:fontFamily="sans-serif"
                            android:inputType="textEmailAddress"
                            android:id="@+id/TFusername_register"
                            android:layout_marginBottom="10dp" />

                        <EditText
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:drawableLeft="@drawable/user_icon"
                            android:hint="@string/pref_title_email"
                            android:fontFamily="sans-serif"
                            android:inputType="textEmailAddress"
                            android:id="@+id/TFemail_register"
                            android:layout_marginBottom="10dp"
                            android:layout_marginTop="16dp" />

                        <EditText
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="16dp"
                            android:drawableLeft="@drawable/password_icon"
                            android:hint="@string/pref_title_password"
                            android:fontFamily="sans-serif"
                            android:inputType="textPassword"
                            android:id="@+id/TFpass1_register"
                            android:layout_marginBottom="10dp" />

                        <EditText
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="16dp"
                            android:drawableLeft="@drawable/password_icon"
                            android:hint="@string/pref_title_password_repeat"
                            android:fontFamily="sans-serif"
                            android:inputType="textPassword"
                            android:id="@+id/TFpass2_register"/>

                        <Button
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_margin="20dp"
                            android:id="@+id/register_button"
                            android:background="@color/colorPrimary"
                            android:text="@string/signup"
                            android:textAllCaps="false"
                            style="@style/white_title" />
                        <Button
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="20dp"
                            android:layout_marginRight="20dp"
                            android:layout_marginBottom="20dp"
                            android:id="@+id/cancel_button"
                            android:background="@color/colorPrimary"
                            android:text="@string/mdtp_cancel"
                            android:textAllCaps="false"
                            style="@style/white_title"/>

                    </LinearLayout>

                </LinearLayout>
            </android.support.v7.widget.CardView>

        </android.support.v4.widget.NestedScrollView>

    </android.support.design.widget.CoordinatorLayout>

</android.support.v4.widget.DrawerLayout>
